--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked       20/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 133 points<br>
+Unlocked       20/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 138 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -54,6 +54,7 @@ Unlocked       20/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 <li><div class="title">Weaver</div>  <div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
@@ -61,29 +62,29 @@ Unlocked       20/      51 <a href="http://github.com/icefox/git-achievements">G
 Git commands sorted by usage:
 <pre style="text-align: left">
   85 status
-  77 log
+  82 log
   42 checkout
   39 commit
   29 add
   18 branch
   16 rebase
+  16 push
   14 stash
   13 reset
   13 diff
   11 remote
   10 show
-   8 push
+   7 cherry-pick
+   6 revert
    6 fetch
    4 config
    3 rm
-   3 revert
    3 reflog
    3 merge
    3 help
    3 clean
    2 pull
    2 init
-   2 cherry-pick
    1 achievements
    1 --help
 </pre>
